[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-radio-tui"
version = "0.1.0"
description = "Textual TUI for live M3U8 radio transcription with ffmpeg and Mistral Realtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "imageio-ffmpeg>=0.5.1",
  "mistralai[realtime]>=1.8.0",
  "textual>=0.61.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
radio-transcribe-tui = "realtime_radio_tui.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
